--- a/test.html
+++ b/test.html
@@ -1,11 +1,81 @@
 <html>
-  <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-  <ul class="widget">
-    <li class="cs_lab">1</li>
-    <li class="cs_lab">2</li>
-    <li class="cs_lab">3</li>
-    <li class="cs_lab">4</li>
-    <li class="cs_lab">5</li>
-    <li class="cs_lab">6</li>
-  </ul>
+    <link type=" text/css " rel="stylesheet " href="stylesheet.css " />
+
+        <ul class="widget">
+
+            <ul class="cs_lab"><header class="lab_title">CF 405</header>
+                <article class="lab_machine">01</article>
+                <article class="lab_machine">02</article>
+                <article class="lab_machine">03</article>
+                <article class="lab_machine">04</article>
+                <article class="lab_machine">05</article>
+                <article class="lab_machine">06</article>
+                <article class="lab_machine">07</article>
+                <article class="lab_machine">08</article>
+                <article class="lab_machine">09</article>
+                <article class="lab_machine">10</article>
+                <article class="lab_machine">11</article>
+                <article class="lab_machine">12</article>
+                <article class="lab_machine">13</article>
+                <article class="lab_machine">14</article>
+                <article class="lab_machine">15</article>
+                <article class="lab_machine">16</article>
+                <article class="lab_machine">17</article>
+                <article class="lab_machine">18</article>
+                <article class="lab_machine">19</article>
+                <article class="lab_machine">20</article>
+            </ul>
+
+            <ul class="cs_lab "><header class="lab_title">CF 418</header>
+                <article class="lab_machine">01</article>
+                <article class="lab_machine">02</article>
+                <article class="lab_machine">03</article>
+                <article class="lab_machine">04</article>
+                <article class="lab_machine">05</article>
+                <article class="lab_machine">06</article>
+                <article class="lab_machine">07</article>
+                <article class="lab_machine">08</article>
+                <article class="lab_machine">09</article>
+                <article class="lab_machine">10</article>
+                <article class="lab_machine">11</article>
+                <article class="lab_machine">12</article>
+                <article class="lab_machine">13</article>
+                <article class="lab_machine">14</article>
+                <article class="lab_machine">15</article>
+                <article class="lab_machine">16</article>
+                <article class="lab_machine">17</article>
+                <article class="lab_machine">18</article>
+            </ul>
+
+            <ul class="cs_lab "><header class="lab_title">CF 414</header>
+                <article class="lab_machine">01</article>
+                <article class="lab_machine">02</article>
+                <article class="lab_machine">03</article>
+                <article class="lab_machine">04</article>
+                <article class="lab_machine">05</article>
+                <article class="lab_machine">06</article>
+                <article class="lab_machine">07</article>
+                <article class="lab_machine">08</article>
+                <article class="lab_machine">09</article>
+                <article class="lab_machine">10</article>
+                <article class="lab_machine">11</article>
+                <article class="lab_machine">12</article>
+                <article class="lab_machine">13</article>
+                <article class="lab_machine">14</article>
+                <article class="lab_machine">15</article>
+                <article class="lab_machine">16</article>
+                <article class="lab_machine">17</article>
+                <article class="lab_machine">18</article>
+                <article class="lab_machine">19</article>
+                <article class="lab_machine">20</article>
+                <article class="lab_machine">21</article>
+                <article class="lab_machine">22</article>
+                <article class="lab_machine">23</article>
+            </ul>
+            <ul class="cs_lab"><header class="lab_title">CF 416</header></ul>
+            <ul class="cs_lab"><header class="lab_title">CF 162</header></ul>
+            <ul class="cs_lab"><header class="lab_title">CF 164</header></ul>
+            <ul class="cs_lab"><header class="lab_title">Linux Cluster</header></ul>
+        </ul>
+
 </html>
