added javascript file

--- a/test.html
+++ b/test.html
@@ -1,81 +1,87 @@
 <html>
+    <head>
+	<title>Support Operations Dashboard</title>
+        <meta name="description" content="CS Support operations dashboard.">
+        <meta name="author" content="Sophia Anderson ander569@wwu.edu">
+    </head>
+    <body>
     <link type=" text/css " rel="stylesheet " href="stylesheet.css " />
 
         <ul class="widget">
 
             <ul class="cs_lab"><header class="lab_title">CF 405</header>
-                <article class="lab_machine">01</article>
-                <article class="lab_machine">02</article>
-                <article class="lab_machine">03</article>
-                <article class="lab_machine">04</article>
-                <article class="lab_machine">05</article>
-                <article class="lab_machine">06</article>
-                <article class="lab_machine">07</article>
-                <article class="lab_machine">08</article>
-                <article class="lab_machine">09</article>
-                <article class="lab_machine">10</article>
-                <article class="lab_machine">11</article>
-                <article class="lab_machine">12</article>
-                <article class="lab_machine">13</article>
-                <article class="lab_machine">14</article>
-                <article class="lab_machine">15</article>
-                <article class="lab_machine">16</article>
-                <article class="lab_machine">17</article>
-                <article class="lab_machine">18</article>
-                <article class="lab_machine">19</article>
-                <article class="lab_machine">20</article>
+                <div class="lab_machine">01</div>
+                <div class="lab_machine">02</div>
+                <div class="lab_machine">03</div>
+                <div class="lab_machine">04</div>
+                <div class="lab_machine">05</div>
+                <div class="lab_machine">06</div>
+                <div class="lab_machine">07</div>
+                <div class="lab_machine">08</div>
+                <div class="lab_machine">09</div>
+                <div class="lab_machine">10</div>
+                <div class="lab_machine">11</div>
+                <div class="lab_machine">12</div>
+                <div class="lab_machine">13</div>
+                <div class="lab_machine">14</div>
+                <div class="lab_machine">15</div>
+                <div class="lab_machine">16</div>
+                <div class="lab_machine">17</div>
+                <div class="lab_machine">18</div>
+                <div class="lab_machine">19</div>
+                <div class="lab_machine">20</div>
             </ul>
 
             <ul class="cs_lab "><header class="lab_title">CF 418</header>
-                <article class="lab_machine">01</article>
-                <article class="lab_machine">02</article>
-                <article class="lab_machine">03</article>
-                <article class="lab_machine">04</article>
-                <article class="lab_machine">05</article>
-                <article class="lab_machine">06</article>
-                <article class="lab_machine">07</article>
-                <article class="lab_machine">08</article>
-                <article class="lab_machine">09</article>
-                <article class="lab_machine">10</article>
-                <article class="lab_machine">11</article>
-                <article class="lab_machine">12</article>
-                <article class="lab_machine">13</article>
-                <article class="lab_machine">14</article>
-                <article class="lab_machine">15</article>
-                <article class="lab_machine">16</article>
-                <article class="lab_machine">17</article>
-                <article class="lab_machine">18</article>
+                <div class="lab_machine">01</div>
+                <div class="lab_machine">02</div>
+                <div class="lab_machine">03</div>
+                <div class="lab_machine">04</div>
+                <div class="lab_machine">05</div>
+                <div class="lab_machine">06</div>
+                <div class="lab_machine">07</div>
+                <div class="lab_machine">08</div>
+                <div class="lab_machine">09</div>
+                <div class="lab_machine">10</div>
+                <div class="lab_machine">11</div>
+                <div class="lab_machine">12</div>
+                <div class="lab_machine">13</div>
+                <div class="lab_machine">14</div>
+                <div class="lab_machine">15</div>
+                <div class="lab_machine">16</div>
+                <div class="lab_machine">17</div>
+                <div class="lab_machine">18</div>
             </ul>
 
             <ul class="cs_lab "><header class="lab_title">CF 414</header>
-                <article class="lab_machine">01</article>
-                <article class="lab_machine">02</article>
-                <article class="lab_machine">03</article>
-                <article class="lab_machine">04</article>
-                <article class="lab_machine">05</article>
-                <article class="lab_machine">06</article>
-                <article class="lab_machine">07</article>
-                <article class="lab_machine">08</article>
-                <article class="lab_machine">09</article>
-                <article class="lab_machine">10</article>
-                <article class="lab_machine">11</article>
-                <article class="lab_machine">12</article>
-                <article class="lab_machine">13</article>
-                <article class="lab_machine">14</article>
-                <article class="lab_machine">15</article>
-                <article class="lab_machine">16</article>
-                <article class="lab_machine">17</article>
-                <article class="lab_machine">18</article>
-                <article class="lab_machine">19</article>
-                <article class="lab_machine">20</article>
-                <article class="lab_machine">21</article>
-                <article class="lab_machine">22</article>
-                <article class="lab_machine">23</article>
+                <div class="lab_machine">01</div>
+                <div class="lab_machine">02</div>
+                <div class="lab_machine">03</div>
+                <div class="lab_machine">04</div>
+                <div class="lab_machine">05</div>
+                <div class="lab_machine">06</div>
+                <div class="lab_machine">07</div>
+                <div class="lab_machine">08</div>
+                <div class="lab_machine">09</div>
+                <div class="lab_machine">10</div>
+                <div class="lab_machine">11</div>
+                <div class="lab_machine">12</div>
+                <div class="lab_machine">13</div>
+                <div class="lab_machine">14</div>
+                <div class="lab_machine">15</div>
+                <div class="lab_machine">16</div>
+                <div class="lab_machine">17</div>
+                <div class="lab_machine">18</div>
+                <div class="lab_machine">19</div>
+                <div class="lab_machine">20</div>
+                <div class="lab_machine">21</div>
+                <div class="lab_machine">22</div>
+                <div class="lab_machine">23</div>
             </ul>
             <ul class="cs_lab"><header class="lab_title">CF 416</header></ul>
             <ul class="cs_lab"><header class="lab_title">CF 162</header></ul>
             <ul class="cs_lab"><header class="lab_title">CF 164</header></ul>
             <ul class="cs_lab"><header class="lab_title">Linux Cluster</header></ul>
         </ul>
-
+</body>
 </html>
